--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       </div>
     </div>
     
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
     <!-- Twitter Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
