--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </head>
   <body>
     <!-- example content -->
-    <div class="mui-container">
-      <div class="mui-panel">
+    <div class="container">
+      <div class="panel">
         <h1>My Title</h1>
-        <button class="mui-btn mui-btn--primary mui-btn--raised">My Button</button>
+        <button class="btn btn--primary btn--raised">My Button</button>
       </div>
     </div>
     
