--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
     
   </head>
   <body>
-    <!-- example content -->
-    <div class="container">
+    <div class="header-panel">
+      <div class="container-fluid">
+        132
+      </div>
+    </div>
+    <div class="container-fluid main">
       <div class="panel">
         <h1>My Title</h1>
         <button class="btn btn--primary btn--raised">My Button</button>
