--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid main">
       <div class="panel">
         <h1>My Title</h1>
-        <button class="btn btn--primary">My Button</button>
+        <button class="btn btn-raised btn-primary">My Button</button>
       </div>
     </div>
     
